# lab_2_9_cpp

./: CMakeLists.txt  README.md  main.cpp
